--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,36 @@ __marimo__/
 
 # Claude Code
 .claude/
+
+# React/Node.js
+react-app/node_modules/
+react-app/build/
+react-app/dist/
+react-app/.env
+react-app/.env.local
+react-app/.env.development.local
+react-app/.env.test.local
+react-app/.env.production.local
+
+# npm/yarn
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
