repo prepped for deployment

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "React web app for restaurant bill splitting with party management",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://kingfischer16.github.io/restaurant-bill-splitter",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -33,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
